frontend add ons

--- a/index.html
+++ b/index.html
@@ -50,14 +50,19 @@
             >Welcome to my little corner of the internet!<br /><br />I'm a
             tech-savvy creative from Cagayan de Oro City who went from chronic
             doomscroling (I still do--I have a 200+ ongoing streak) to designing
-            with direction.<br /><br />Newsflash--this is not my
+            with direction.<br /><br />Newsflash--this is not my only
           </span>
-          <span class="description-underline">only</span>
           <span class="description-text">
             portfolio. Consider this one of many, I have one for my funnels and
-            another for design. This one? We're talking web development, UI/UX,
-            and everything else I learned during my time in ITCC 13.1 - Web
-            Systems and Technologies :></span
+            another for
+            <a
+              href="https://drive.google.com/file/d/1VnNKd_LTYmHEe76SnQ_A6ZOyCp5lSsH4/view?usp=sharing"
+              target="_blank"
+              class="design-portfolio-link"
+              >design</a
+            >. This one? We're talking web development, UI/UX, and everything
+            else I learned during my time in ITCC 13.1 - Web Systems and
+            Technologies :></span
           >
         </div>
         <div
@@ -370,38 +375,59 @@
           want to go.
         </div>
         <div class="social-links">
-          <div class="social-link social-link-orange">
-            <div class="social-icon social-icon-orange"></div>
-            <div class="social-text social-text-orange">
-              Let's be friends! ^_^
+          <a href="https://www.instagram.com/sundaespesyal/" target="_blank">
+            <div class="social-link social-link-orange">
+              <div class="social-icon social-icon-orange"></div>
+              <div class="social-text social-text-orange">
+                Let's be friends! ^_^
+              </div>
             </div>
-          </div>
-          <div class="social-link social-link-brown">
-            <div class="social-icon social-icon-brown"></div>
-            <div class="social-text social-text-brown">
-              Support Sundesigns here!
+          </a>
+          <a href="https://www.instagram.com/sundesignsph/" target="_blank">
+            <div class="social-link social-link-brown">
+              <div class="social-icon social-icon-brown"></div>
+              <div class="social-text social-text-brown">
+                Support Sundesigns here!
+              </div>
             </div>
-          </div>
-          <div class="social-link social-link-purple">
-            <div class="social-icon social-icon-purple"></div>
-            <div class="social-text social-text-purple">
-              Send me a connect invite
+          </a>
+          <a
+            href="https://www.linkedin.com/in/sandy-lumacad-79a526232/"
+            target="_blank"
+          >
+            <div class="social-link social-link-purple">
+              <div class="social-icon social-icon-purple"></div>
+              <div class="social-text social-text-purple">
+                Send me a connect invite
+              </div>
             </div>
-          </div>
-          <div class="social-link social-link-blue">
-            <div class="social-icon social-icon-blue"></div>
-            <div>
-              <span class="social-text social-text-blue"
-                >Want to work with me? <br
-              /></span>
-              <span class="social-text social-text-blue-bold"
-                >SWEET LET'S GO!</span
-              >
+          </a>
+          <a href="https://officialsandy-ss.systeme.io/" target="_blank">
+            <div class="social-link social-link-blue">
+              <div class="social-icon social-icon-blue"></div>
+              <div>
+                <span class="social-text social-text-blue"
+                  >Want to work with me? <br
+                /></span>
+                <span class="social-text social-text-blue-bold"
+                  >SWEET LET'S GO!</span
+                >
+              </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
       <div class="overlay"></div>
+    </div>
+    <div class="credit-line">
+      <div class="credit-text">
+        <span class="credit-text-1">Designed and Developed by</span>
+        <span class="credit-text-2"
+          >Sandy Lumacad in compliance of ITCC 13.1 Web Systems and Technologies
+          Final Project</span
+        >
+      </div>
+      <div class="credit-icon"></div>
     </div>
   </body>
 </html>
