added responsiveness to about section

--- a/index.html
+++ b/index.html
@@ -36,27 +36,24 @@
       </div>
       <div class="about-section">
         <div class="about-title">
-          <span class="emoji">👋</span>
-          <span class="title-red">Hey, I'm Sandy --</span>
-          <span class="title-orange">Digital Designer,</span>
-          <span class="title-red">IT Student,</span>
-          <span class="title-purple">City Scholar,</span>
-          <span class="title-red">Breadwinner,</span>
-          <span class="title-orange">First-Gen Kolehiyala,</span>
-          <span class="title-red">and World's Most</span>
-          <span class="title-purple">Multipassionate</span>
-          <span class="title-red">Person (Really!)</span>
+          <span class="emoji span-title">👋</span>
+          <span class="title-red span-title">Hey, I'm Sandy --</span>
+          <span class="title-orange span-title">Digital Designer,</span>
+          <span class="title-red span-title">IT Student,</span>
+          <span class="title-purple span-title">City Scholar,</span>
+          <span class="title-red span-title">Breadwinner,</span>
+          <span class="title-orange span-title">First-Gen Kolehiyala,</span>
+          <span class="title-red span-title">and World's Most</span>
+          <span class="title-purple span-title">Multipassionate</span>
+          <span class="title-red span-title">Person (Really!)</span>
         </div>
         <div class="about-description">
           <span class="description-text"
             >Welcome to my little corner of the internet!<br /><br />I'm a
             tech-savvy creative from Cagayan de Oro City who went from chronic
             doomscroling (I still do--I have a 200+ ongoing streak) to designing
-            with direction.<br /><br />Newsflash--this is not my only
-          </span>
-          <span class="description-text">
-            portfolio. Consider this one of many, I have one for my funnels and
-            another for
+            with direction.<br /><br />Newsflash--this is not my only portfolio.
+            Consider this one of many, I have one for my funnels and another for
             <a
               href="https://drive.google.com/file/d/1VnNKd_LTYmHEe76SnQ_A6ZOyCp5lSsH4/view?usp=sharing"
               target="_blank"
