added btn in footer responsiveness

--- a/index.html
+++ b/index.html
@@ -373,6 +373,15 @@
           talk overload--just a real convo about where you're at and where you
           want to go.
         </div>
+        <button class="footer-mobile-btn">
+          <a
+            href="https://officialsandy-ss.systeme.io/"
+            target="_blank"
+            class="footer-mobile-link"
+          >
+            <div class="footer-mobile-text">Let's chat!</div>
+          </a>
+        </button>
         <div class="social-links">
           <a href="https://www.instagram.com/sundaespesyal/" target="_blank">
             <div class="social-link social-link-orange">
