added some yapping

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
               >design</a
             >. This one? We're talking web development, UI/UX, and everything
             else I learned during my time in ITCC 13.1 - Web Systems and
-            Technologies :></span
+            Technologies :> <br />
+            NOTE: This is MANUALLY coded so it definitely not the best
+            responsive-wise, if you're viewing this on your phone.
+            Well...whatever lol</span
           >
         </div>
         <div
