--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               >design</a
             >. This one? We're talking web development, UI/UX, and everything
             else I learned during my time in ITCC 13.1 - Web Systems and
-            Technologies :> <br />
+            Technologies :> <br /><br />
             NOTE: This is MANUALLY coded so it definitely not the best
             responsive-wise, if you're viewing this on your phone.
             Well...whatever lol</span
