--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             else I learned during my time in ITCC 13.1 - Web Systems and
             Technologies :> <br /><br />
             NOTE: This is MANUALLY coded so it definitely not the best
-            responsive-wise, if you're viewing this on your phone.
-            Well...whatever lol</span
+            responsive-wise. If you're viewing this on your phone,
+            well...whatever lol</span
           >
         </div>
         <div
