added alt texts for accessibility practice

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
       <div class="hero-section">
         <div class="hero-content">
           <div class="hero-title">Sandy Lumacad</div>
-          <img class="hero-image" src="/image_assets/hero_photo.png" />
+          <img
+            class="hero-image"
+            src="/image_assets/hero_photo.png"
+            alt="Portrait of Sandy Lumacad"
+          />
           <div class="hero-tagline">
             <span class="tagline-underline">No fluff.</span>
             <span class="tagline-text">
@@ -104,7 +108,11 @@
       </div>
       <div class="projects-section">
         <div class="project-item">
-          <img class="project-image" src="/image_assets/1.jpg" />
+          <img
+            class="project-image"
+            src="/image_assets/1.jpg"
+            alt="Landing Page Project Screenshot"
+          />
           <div class="project-details">
             <div class="project-title project-title-dark">
               Landing Page<br />February 5, 2025
@@ -149,10 +157,18 @@
               </a>
             </div>
           </div>
-          <img class="project-image" src="/image_assets/2.jpg" />
+          <img
+            class="project-image"
+            src="/image_assets/2.jpg"
+            alt="Google Clone Project Screenshot"
+          />
         </div>
         <div class="project-item">
-          <img class="project-image" src="/image_assets/3.jpg" />
+          <img
+            class="project-image"
+            src="/image_assets/3.jpg"
+            alt="Business Card Project Screenshot"
+          />
           <div class="project-details">
             <div class="project-title project-title-orange">
               Business Card<br />February 11, 2025
@@ -197,10 +213,18 @@
               </a>
             </div>
           </div>
-          <img class="project-image" src="/image_assets/4.jpg" />
+          <img
+            class="project-image"
+            src="/image_assets/4.jpg"
+            alt="Space Exploration Site Project Screenshot"
+          />
         </div>
         <div class="project-item">
-          <img class="project-image" src="/image_assets/5.jpg" />
+          <img
+            class="project-image"
+            src="/image_assets/5.jpg"
+            alt="Birthday Site Project Screenshot"
+          />
           <div class="project-details">
             <div class="project-title project-title-pink">
               Birthday Site<br />February 24, 2025
@@ -245,10 +269,18 @@
               </a>
             </div>
           </div>
-          <img class="project-image" src="/image_assets/6.jpg" />
+          <img
+            class="project-image"
+            src="/image_assets/6.jpg"
+            alt="Media Queries 1 Project Screenshot"
+          />
         </div>
         <div class="project-item">
-          <img class="project-image" src="/image_assets/7.jpg" />
+          <img
+            class="project-image"
+            src="/image_assets/7.jpg"
+            alt="Media Queries 2 Project Screenshot"
+          />
           <div class="project-details">
             <div class="project-title project-title-brown">
               Media Queries 2<br />March 12, 2025
@@ -293,10 +325,18 @@
               </a>
             </div>
           </div>
-          <img class="project-image" src="/image_assets/8.jpg" />
+          <img
+            class="project-image"
+            src="/image_assets/8.jpg"
+            alt="Passenger Counter Project Screenshot"
+          />
         </div>
         <div class="project-item">
-          <img class="project-image" src="/image_assets/9.jpg" />
+          <img
+            class="project-image"
+            src="/image_assets/9.jpg"
+            alt="Black Jack Game Project Screenshot"
+          />
           <div class="project-details">
             <div class="project-title project-title-green">
               Black Jack Game<br />April 12, 2025
@@ -344,10 +384,18 @@
               </a>
             </div>
           </div>
-          <img class="project-image" src="/image_assets/10.jpg" />
+          <img
+            class="project-image"
+            src="/image_assets/10.jpg"
+            alt="Catch the Egg Game Project Screenshot"
+          />
         </div>
         <div class="project-item">
-          <img class="project-image" src="/image_assets/11.jpg" />
+          <img
+            class="project-image"
+            src="/image_assets/11.jpg"
+            alt="Mood Tracker Project Screenshot"
+          />
           <div class="project-details project-details-collab">
             <div class="project-title project-title-black">
               Mood Tracker<br />STILL IN DEVELOPMENT
