compressed image files and updated links

--- a/index.html
+++ b/index.html
@@ -398,20 +398,22 @@
           />
           <div class="project-details project-details-collab">
             <div class="project-title project-title-black">
-              Mood Tracker<br />STILL IN DEVELOPMENT
+              Mood Tracker
             </div>
             <div class="collab-text collab-text-black">
               In Collaboration with Kate Almonte & Frances Ryle Tan
             </div>
-            <div
+            <
               class="project-button project-button-black-alt"
               data-color="Success"
               data-end-decorator?="false"
               data-size="Lg"
               data-start-decorator?="false"
               data-state="Hover"
-            >
-              <div class="button-text button-text-yellow">Visit Site</div>
+            ><a href="https://youtu.be/rRDLarlARRw?si=aUgN1wtYRmo2jhCx"
+            target="_blank">
+              <div class="button-text button-text-yellow">View Demo</div>
+              </a>
             </div>
           </div>
         </div>
