--- a/index.html
+++ b/index.html
@@ -411,7 +411,8 @@
               data-start-decorator?="false"
               data-state="Hover"
             ><a href="https://youtu.be/rRDLarlARRw?si=aUgN1wtYRmo2jhCx"
-            target="_blank">
+            target="_blank"
+            class="button-text-yellow">
               <div class="button-text button-text-yellow">View Demo</div>
               </a>
             </div>
