--- a/index.html
+++ b/index.html
@@ -397,23 +397,24 @@
             alt="Mood Tracker Project Screenshot"
           />
           <div class="project-details project-details-collab">
-            <div class="project-title project-title-black">
-              Mood Tracker
-            </div>
+            <div class="project-title project-title-black">Mood Tracker</div>
             <div class="collab-text collab-text-black">
               In Collaboration with Kate Almonte & Frances Ryle Tan
             </div>
-            <
+            <div
               class="project-button project-button-black-alt"
               data-color="Success"
-              data-end-decorator?="false"
+              data-end-decorator="false"
               data-size="Lg"
-              data-start-decorator?="false"
+              data-start-decorator="false"
               data-state="Hover"
-            ><a href="https://youtu.be/rRDLarlARRw?si=aUgN1wtYRmo2jhCx"
-            target="_blank"
-            class="button-text-yellow">
-              <div class="button-text button-text-yellow">View Demo</div>
+            >
+              <a
+                href="https://youtu.be/rRDLarlARRw?si=aUgN1wtYRmo2jhCx"
+                target="_blank"
+                class="visit-site-btn"
+              >
+                <div class="button-text button-text-yellow">View Demo</div>
               </a>
             </div>
           </div>
